Fixed lang file, some pathing issues and made bot be able to path long distances